<resources>
    <string name="app_name">Яндекс API</string>
    <string name="time_format">"E, dd MMMM H:m"</string>
    <string name="time_hour_format">"H:m"</string>
    <string name="time_week_format">"F"</string>
    <string name="feelsLike">Ощущается как </string>
    <string name="descriptions">Descriptions</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reload">reload</string>
    <string name="error">Error</string>
    <string name="city">Город</string>
    <string name="list_citys">Список городов</string>
    <string name="feelsLikeText">Ощущается как</string>
    <string name="Coordinates">Координаты</string>
    <string name="timezone">Часовой пояс</string>
    <string name="Pressure_rate">Норма давления</string>
    <string name="night">Ночь</string>
    <string name="morning">Утро</string>
    <string name="day">День</string>
    <string name="evening">Вечер</string>
    <string name="Sunrise">Восход</string>
    <string name="Sunset">Закат</string>
    <string name="wind">Ветер</string>
    <string name="Pressure">Давление</string>
    <string name="Humidity">Влажность</string>
    <string name="Season">Время года</string>
    <string name="no_data_available">List Empty</string>
    <string name="add_permissions">Add permissions</string>
    <string name="dialog_button_close">Закрыть</string>
    <string name="dialog_title_no_gps">Доступ к геолокации закрыт</string>
    <string name="dialog_message_no_gps">Разрешите доступ к геолокации, если хотите
узнать погоду текущего места</string>
    <string name="dialog_title_gps_turned_off">GPS отключён</string>
    <string name="dialog_message_last_location_unknown">Местонахождение неизвестно.
Включите GPS, если хотите получить погоду по текущему адресу</string>
    <string name="dialog_message_last_known_location">Показана последняя известная
локация. Включите GPS, если хотите обновить местонахождение</string>
    <string name="dialog_rationale_title">Доступ к геолокации</string>
    <string name="dialog_rationale_meaasge">Объяснение</string>
    <string name="dialog_rationale_give_access">Предоставить доступ</string>
    <string name="dialog_rationale_decline">Не надо</string>
    <string name="dialog_address_title">Ваш адрес</string>
    <string name="dialog_address_get_weather">Узнать погоду</string>
    <string name="paid">Paid version required</string>
</resources>