<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_item"
    style="@style/card_style_base">

    <LinearLayout
        style="@style/liner_layout_default.height"
        android:padding="5dp">

        <TextView
            android:id="@+id/week_day"
            style="@style/week_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/night"
                style="@style/week_text"
                android:text="@string/night"
                app:layout_constraintBottom_toBottomOf="@+id/night_icon"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/night_icon"
                style="@style/week_icon_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/night_temperature"
                style="@style/week_text_temp"
                android:layout_marginRight="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/night_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/night_icon" />

            <TextView
                android:id="@+id/morning"
                style="@style/week_text"
                android:text="@string/morning"
                app:layout_constraintBottom_toBottomOf="@id/morning_icon"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/morning_icon"
                style="@style/week_icon_size"
                app:layout_constraintStart_toStartOf="@+id/night_icon"
                app:layout_constraintTop_toBottomOf="@+id/night_icon" />

            <TextView
                android:id="@+id/morning_temperature"
                style="@style/week_text_temp"
                app:layout_constraintBottom_toBottomOf="@+id/morning_icon"
                app:layout_constraintStart_toStartOf="@+id/night_temperature" />

            <TextView
                android:id="@+id/day"
                style="@style/week_text"
                android:text="@string/day"
                app:layout_constraintBottom_toBottomOf="@id/day_icon"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/day_icon"
                style="@style/week_icon_size"
                app:layout_constraintStart_toStartOf="@+id/morning_icon"
                app:layout_constraintTop_toBottomOf="@+id/morning_icon" />

            <TextView
                android:id="@+id/day_temperature"
                style="@style/week_text_temp"
                app:layout_constraintBottom_toBottomOf="@+id/day_icon"
                app:layout_constraintStart_toStartOf="@+id/morning_temperature" />

            <TextView
                android:id="@+id/evening"
                style="@style/week_text"
                android:text="@string/evening"
                app:layout_constraintBottom_toBottomOf="@id/evening_icon"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/evening_icon"
                style="@style/week_icon_size"
                app:layout_constraintStart_toStartOf="@+id/day_icon"
                app:layout_constraintTop_toBottomOf="@+id/day_icon" />

            <TextView
                android:id="@+id/evening_temperature"
                style="@style/week_text_temp"
                app:layout_constraintBottom_toBottomOf="@+id/evening_icon"
                app:layout_constraintStart_toStartOf="@+id/day_temperature" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>